added feedback recomendations

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 JWT_PASSPHRASE=c29tZV9qd3RfcHA=
-MONGODB_URI=mongodb+srv://admin:demo@cluster0.baqrm.mongodb.net/challenge?authSource=admin&replicaSet=atlas-8gk8j3-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true
-MONGODB_URI_TEST=mongodb+srv://admin:demo@cluster0.baqrm.mongodb.net/test?authSource=admin&replicaSet=atlas-8gk8j3-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true
+MONGODB_URI=mongodb+srv://PUT_YOUR_MONGODB_ATLAS_HERE
+MONGODB_URI_TEST=mongodb+srv://PUT_YOUR_MONGODB_ATLAS_HERE
 SERVER_PORT=8080
 NODE_ENV=local
