--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGODB_URI=mongodb+srv://PUT_YOUR_MONGODB_ATLAS_HERE
 MONGODB_URI_TEST=mongodb+srv://PUT_YOUR_MONGODB_ATLAS_HERE
 SERVER_PORT=8080
 NODE_ENV=local
+NODEMAILER_PWD="YOUR_PASSWORD"
+NODEMAILER_USERNAME="SOME_EMAIL@gmail.com"
