--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
+    "nodemailer": "^6.7.2",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
